--- a/sobre.html
+++ b/sobre.html
@@ -41,7 +41,7 @@
 <p>Envie um e-mail para <a href="mailto:electriverexport@gmail.com"><strong>electriverexport@gmail.com</strong></a> caso queira ver código, dicas, de algum jogo que ainda não adicionei.</p>
 
 <p>Os ícones usados no aplicativo são do site <a href="https://icons8.com" style="text-decoration: underline;">Icons8</a>.</p>
-    <p>Criado con <a href="https://www.webintoapp.com/html-to-app" style="text-decoration: underline;">webintoapp</a></p>
+    <p>Criado com <a href="https://www.webintoapp.com/html-to-app" style="text-decoration: underline;">webintoapp</a></p>
 </main> 
 
 
