--- a/sobre.html
+++ b/sobre.html
@@ -33,15 +33,41 @@
 </div>
     
 <main>
-<h2>Sobre</h2>  
-  
-    
-    <p>Olá, sou Luciano Quintela, um desenvolvedor independente. Se você comprou este app, desde já agradeço, pois eu o desenvolvi sozinho usando apenas meu smartphone. Com isso, você me ajuda a comprar um computador e melhorar o aplicativo. No momento, ele só funciona com internet e não tenho como mudar isso por enquanto, mas, no futuro, quem sabe?</p>
+ <h2>Sobre</h2>
+
+<p>Olá, sou Luciano Quintela, um desenvolvedor independente. Se você comprou este app, desde já agradeço, pois eu o desenvolvi sozinho usando apenas meu smartphone. Com isso, você me ajuda a comprar um computador e melhorar o aplicativo. No momento, ele só funciona com internet e não tenho como mudar isso por enquanto, mas, no futuro, quem sabe?</p>
 
 <p>Envie um e-mail para <a href="mailto:electriverexport@gmail.com"><strong>electriverexport@gmail.com</strong></a> caso queira ver código, dicas, de algum jogo que ainda não adicionei.</p>
 
 <p>Os ícones usados no aplicativo são do site <a href="https://icons8.com" style="text-decoration: underline;">Icons8</a>.</p>
-    <p>Criado com <a href="https://www.webintoapp.com/html-to-app" style="text-decoration: underline;">webintoapp</a></p>
+
+<p>Criado com <a href="https://www.webintoapp.com/html-to-app" style="text-decoration: underline;">webintoapp</a></p>
+
+<h3>Licença MIT</h3>
+<p>O código fonte deste aplicativo está licenciado sob a Licença MIT.</p>
+<pre>
+MIT License
+
+Copyright (c) 2025 Luciano Quintela
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
+THE SOFTWARE.
+</pre>
 </main> 
 
 
