--- a/sobre.html
+++ b/sobre.html
@@ -33,7 +33,7 @@
 </div>
     
 <main>
- <h2>Sobre</h2>
+<h2>Sobre</h2>
 
 <p>Olá, sou Luciano Quintela, um desenvolvedor independente. Se você comprou este app, desde já agradeço, pois eu o desenvolvi sozinho usando apenas meu smartphone. Com isso, você me ajuda a comprar um computador e melhorar o aplicativo. No momento, ele só funciona com internet e não tenho como mudar isso por enquanto, mas, no futuro, quem sabe?</p>
 
@@ -44,8 +44,10 @@
 <p>Criado com <a href="https://www.webintoapp.com/html-to-app" style="text-decoration: underline;">webintoapp</a></p>
 
 <h3>Licença MIT</h3>
-<p>O código fonte deste aplicativo está licenciado sob a Licença MIT.</p>
-<pre>
+<p>O código fonte deste aplicativo está licenciado sob a Licença MIT. Para mais detalhes, clique <a href="javascript:void(0);" onclick="document.getElementById('licenseText').style.display='block';">aqui</a>.</p>
+
+<div id="licenseText" style="display:none; padding:10px; background-color:#f4f4f4; border:1px solid #ddd; color:#000; max-height:300px; overflow-y:auto;">
+    <pre>
 MIT License
 
 Copyright (c) 2025 Luciano Quintela
@@ -67,8 +69,11 @@ AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 THE SOFTWARE.
-</pre>
+    </pre>
+</div>
 </main> 
+
+
 
 
 <footer>
