--- a/sobre.html
+++ b/sobre.html
@@ -44,7 +44,7 @@
 <p>Criado com <a href="https://www.webintoapp.com/html-to-app" style="text-decoration: underline;">webintoapp</a></p>
 
 <h3>Licença MIT</h3>
-<p>O código fonte deste aplicativo está licenciado sob a Licença MIT. Para mais detalhes, clique <a href="javascript:void(0);" onclick="document.getElementById('licenseText').style.display='block';">aqui</a>.</p>
+<p>O código fonte deste aplicativo está licenciado sob a Licença MIT. Para mais detalhes, clique <a href="javascript:void(0);" onclick="document.getElementById('licenseText').style.display='block';" style="text-decoration: underline;" >aqui</a>.</p>
 
 <div id="licenseText" style="display:none; padding:10px; background-color:#f4f4f4; border:1px solid #ddd; color:#000; max-height:300px; overflow-y:auto;">
     <pre>
